// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar el componente 1`] = `
<Fragment>
  <h3>
    Facebook
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se carga imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    Facebook
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="img example"
      url="https://localhost/example/img.jpm"
    />
  </div>
</Fragment>
`;
